# personal-finance-vertex-search

./: .env.example  .gitignore  CLAUDE.md  GETTING_STARTED.md  PROJECT.md  README.md  SESSIONS.md  pyproject.toml
bot/: __init__.py  config.py  main.py
bot/analytics/: __init__.py  tag_client.py
bot/extraction/: __init__.py  receipt.py  transcript_cleanup.py
bot/extraction/prompts/: receipt_extraction.md
bot/handlers/: __init__.py  commands.py  document.py  photo.py  text.py  voice.py
bot/query/: __init__.py  rag.py  router.py  sql.py
dashboard/: README.md
docs/: architecture.md
docs/runbooks/: failed_transcription.md  onboarding_new_podcast.md  reindex_corpus.md
infra/scripts/: bootstrap_aws.sh  bootstrap_gcp.sh  create_datastores.sh  deploy_bot.sh  deploy_lambdas.sh
ingestion/: __init__.py
ingestion/rss_watcher/: __init__.py  feeds.yaml  handler.py
ingestion/shared/: __init__.py  gcs_client.py  vertex_search.py
ingestion/transcribe_complete/: __init__.py  handler.py
schemas/bigquery/: events.sql  podcasts.sql  receipts.sql
schemas/vertex_ai_search/: metadata_schema.json
scripts/: set_webhook.sh
tag_server/: README.md
